--- a/credits/index.html
+++ b/credits/index.html
@@ -1,47 +1,124 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Credits - Cheating Daddy</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <meta name="description" content="a free and opensource app that lets you gain an unfair advantage" />
+        <meta name="description" content="Promo video credits for Cheating Daddy" />
         <meta name="author" content="soham.sh" />
-        <meta name="keywords" content="cheating, daddy, app, free, opensource, unfair advantage" />
-        <meta property="og:title" content="cheating daddy" />
+        <meta property="og:title" content="Credits - Cheating Daddy" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://cheatingdaddy.com" />
+        <meta property="og:url" content="https://cheatingdaddy.com/credits" />
         <meta property="og:image" content="https://cheatingdaddy.com/assets/bg.png" />
-        <meta property="og:image:width" content="1200" />
-        <meta property="og:image:height" content="630" />
-        <meta property="og:image:alt" content="cheating daddy logo" />
-        <meta property="og:description" content="a free and opensource app that lets you gain an unfair advantage" />
-        <meta property="og:site_name" content="cheating daddy" />
-        <meta property="og:locale" content="en_US" />
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="cheating daddy" />
-        <meta name="twitter:description" content="a free and opensource app that lets you gain an unfair advantage" />
-        <meta name="twitter:image" content="https://cheatingdaddy.com/assets/bg.png" />
-        <meta name="twitter:site" content="@cheating_daddy" />
-        <link rel="icon" href="https://cheatingdaddy.com/favicon.ico" type="image/x-icon" />
+        <meta property="og:description" content="Promo video credits" />
+        <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
-        <title>Promo Vid credits</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="/common.css" />
+
+        <style>
+            .credit-item {
+                padding: 16px 0;
+                border-bottom: 1px solid var(--border);
+            }
+
+            .credit-item:last-child {
+                border-bottom: none;
+            }
+
+            .credit-item a {
+                font-size: 15px;
+                color: var(--text);
+                text-decoration: underline;
+                text-underline-offset: 2px;
+            }
+
+            .credit-item a:hover {
+                color: var(--text-secondary);
+            }
+        </style>
     </head>
     <body>
-        <h1>Promo Vid credits</h1>
-        <a href="https://sketchfab.com/3d-models/free-018-kana-sitting-993eaa99578640e98dce99e40c8b5b5c"> kana sitting</a>
-        <br />
-        <a href="https://sketchfab.com/3d-models/man-sitting-b46bceb164b74346897c7a62691a1d5c"> man sitting</a>
-        <br />
-        <a href="https://sketchfab.com/3d-models/long-table-86f23ac640434aef8795e3509510ea4f"> long table</a>
-        <br />
-        <a href="https://sketchfab.com/3d-models/19th-century-artillery-bastion-8670e8a3d5514fe98cca14db6321b1fa"> 19th century artillery bastion</a>
-        <br />
-        <a href="https://sketchfab.com/3d-models/flowervase-dd034b35949f4d0182b576565e54b52b"> flowervase</a>
-        <br />
-        <a href="https://sketchfab.com/3d-models/laptop-7d870e900889481395b4a575b9fa8c3e"> laptop</a>
-        <br />
-        <a href="https://sketchfab.com/3d-models/laptop-f69d66e7a3404a6b91d59882409097ab"> laptop</a>
-        <br />
-        <a href="https://sketchfab.com/3d-models/cover-chair-86c6d5e7bb954a949b9977decbd3009b"> cover chair</a>
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="/" class="nav-brand">Cheating Daddy</a>
+                <div class="nav-links">
+                    <a href="/help">Help</a>
+                    <a href="/download">Download</a>
+                    <a href="https://github.com/sohzm/cheating-daddy" target="_blank">GitHub</a>
+                </div>
+            </div>
+        </nav>
+
+        <div class="main-content">
+            <div class="container">
+                <div class="page-header">
+                    <h1 class="page-title">Credits</h1>
+                    <p class="page-subtitle">Promo video 3D assets.</p>
+                </div>
+
+                <hr class="divider" />
+
+                <div class="content-section">
+                    <div class="section-header">
+                        <h2>3D Models</h2>
+                    </div>
+
+                    <div class="credit-item">
+                        <a href="https://sketchfab.com/3d-models/free-018-kana-sitting-993eaa99578640e98dce99e40c8b5b5c" target="_blank">Kana Sitting</a>
+                    </div>
+                    <div class="credit-item">
+                        <a href="https://sketchfab.com/3d-models/man-sitting-b46bceb164b74346897c7a62691a1d5c" target="_blank">Man Sitting</a>
+                    </div>
+                    <div class="credit-item">
+                        <a href="https://sketchfab.com/3d-models/long-table-86f23ac640434aef8795e3509510ea4f" target="_blank">Long Table</a>
+                    </div>
+                    <div class="credit-item">
+                        <a href="https://sketchfab.com/3d-models/19th-century-artillery-bastion-8670e8a3d5514fe98cca14db6321b1fa" target="_blank">19th Century Artillery Bastion</a>
+                    </div>
+                    <div class="credit-item">
+                        <a href="https://sketchfab.com/3d-models/flowervase-dd034b35949f4d0182b576565e54b52b" target="_blank">Flowervase</a>
+                    </div>
+                    <div class="credit-item">
+                        <a href="https://sketchfab.com/3d-models/laptop-7d870e900889481395b4a575b9fa8c3e" target="_blank">Laptop</a>
+                    </div>
+                    <div class="credit-item">
+                        <a href="https://sketchfab.com/3d-models/laptop-f69d66e7a3404a6b91d59882409097ab" target="_blank">Laptop (alt)</a>
+                    </div>
+                    <div class="credit-item">
+                        <a href="https://sketchfab.com/3d-models/cover-chair-86c6d5e7bb954a949b9977decbd3009b" target="_blank">Cover Chair</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <footer class="footer">
+            <div class="footer-container">
+                <a href="https://github.com/sohzm/cheating-daddy" target="_blank" class="github-star">
+                    <img src="/assets/social/github.svg" alt="GitHub" />
+                    <span>Star on GitHub</span>
+                </a>
+
+                <div class="social-links">
+                    <a href="https://discord.gg/GCBdubnXfJ" target="_blank">
+                        <img src="/assets/social/discord.svg" alt="Discord" />
+                    </a>
+                    <a href="https://instagram.com/cheating_daddy" target="_blank">
+                        <img src="/assets/social/insta.svg" alt="Instagram" />
+                    </a>
+                    <a href="https://x.com/cheating_daddy" target="_blank">
+                        <img src="/assets/social/twitter.svg" alt="Twitter" />
+                    </a>
+                    <a href="https://www.tiktok.com/@cheating_daddy" target="_blank">
+                        <img src="/assets/social/tiktok.svg" alt="TikTok" />
+                    </a>
+                </div>
+
+                <p class="footer-text">Made by <a href="https://soham.sh/" target="_blank">Soham</a></p>
+            </div>
+        </footer>
     </body>
 </html>
