--- a/download/index.html
+++ b/download/index.html
@@ -1,134 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>cheating daddy - download</title>
+        <title>Download - Cheating Daddy</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <meta name="description" content="a free and opensource app that lets you gain an unfair advantage" />
+        <meta name="description" content="Download Cheating Daddy for Windows and macOS" />
         <meta name="author" content="soham.sh" />
-        <meta name="keywords" content="cheating, daddy, app, free, opensource, unfair advantage" />
-        <meta property="og:title" content="cheating daddy - download" />
+        <meta property="og:title" content="Download - Cheating Daddy" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://cheatingdaddy.com/download" />
         <meta property="og:image" content="https://cheatingdaddy.com/assets/bg.png" />
-        <meta property="og:image:width" content="1200" />
-        <meta property="og:image:height" content="630" />
-        <meta property="og:image:alt" content="cheating daddy logo" />
-        <meta property="og:description" content="download cheating daddy for free" />
-        <meta property="og:site_name" content="cheating daddy" />
-        <meta property="og:locale" content="en_US" />
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="cheating daddy - download" />
-        <meta name="twitter:description" content="download cheating daddy for free" />
-        <meta name="twitter:image" content="https://cheatingdaddy.com/assets/bg.png" />
-        <meta name="twitter:site" content="@cheating_daddy" />
+        <meta property="og:description" content="Download Cheating Daddy for free" />
         <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="/common.css" />
+
+        <style>
+            .download-buttons {
+                display: flex;
+                gap: 12px;
+                flex-wrap: wrap;
+                margin-bottom: 16px;
+            }
+
+            .download-note {
+                font-size: 14px;
+                color: var(--text-tertiary);
+            }
+
+            .download-note a {
+                color: var(--text-secondary);
+                text-decoration: underline;
+                text-underline-offset: 2px;
+            }
+
+            .faq-item {
+                padding: 24px 0;
+                border-bottom: 1px solid var(--border);
+            }
+
+            .faq-item:last-child {
+                border-bottom: none;
+            }
+
+            .faq-item h3 {
+                font-size: 16px;
+                font-weight: 600;
+                margin-bottom: 8px;
+            }
+
+            .faq-item p {
+                font-size: 15px;
+                color: var(--text-secondary);
+                margin: 0;
+                line-height: 1.6;
+            }
+
+            .faq-item a {
+                color: var(--text);
+                text-decoration: underline;
+                text-underline-offset: 2px;
+            }
+
+            .faq-item a:hover {
+                color: var(--text-secondary);
+            }
+        </style>
     </head>
     <body>
-        <!-- Navigation -->
-        <nav class="navbar" id="navbar">
+        <nav class="navbar">
             <div class="nav-container">
-                <a href="/"><img src="/assets/new/new-logo.svg" alt="cheating daddy" class="logo" /></a>
-
+                <a href="/" class="nav-brand">Cheating Daddy</a>
                 <div class="nav-links">
                     <a href="/help">Help</a>
-                    <!-- <a href="/tutorial">Tutorial</a> -->
                     <a href="/download" class="active">Download</a>
-                    <a href="https://github.com/sohzm/cheating-daddy" target="_blank">Source</a>
+                    <a href="https://github.com/sohzm/cheating-daddy" target="_blank">GitHub</a>
                 </div>
             </div>
         </nav>
 
-        <!-- Main Content -->
         <div class="main-content">
             <div class="container">
                 <div class="page-header">
                     <h1 class="page-title">Download</h1>
-                    <p class="page-subtitle">Get the latest version of Cheating Daddy for your platform</p>
+                    <p class="page-subtitle">Get the latest version for your platform.</p>
+                </div>
+
+                <hr class="divider" />
+
+                <div class="content-section">
+                    <div class="section-header">
+                        <h2>Latest Release</h2>
+                    </div>
+
+                    <div class="download-buttons">
+                        <a href="https://github.com/sohzm/cheating-daddy/releases/download/0.5.0/Cheating.Daddy-0.5.0.Setup.exe" class="btn btn-primary">
+                            Windows
+                        </a>
+                        <a href="https://github.com/sohzm/cheating-daddy/releases/download/0.5.0/Cheating.Daddy-0.5.0-arm64.dmg" class="btn btn-primary">
+                            macOS
+                        </a>
+                    </div>
+
+                    <p class="download-note">
+                        Older releases available on <a href="https://github.com/sohzm/cheating-daddy/releases" target="_blank">GitHub Releases</a>
+                    </p>
                 </div>
 
                 <div class="content-section">
-                    <div class="section-content">
-                        <h2 class="mb-24">Latest Release</h2>
-                        <div style="display: flex; gap: 16px; margin-bottom: 32px; flex-wrap: wrap">
-                            <a
-                                href="https://github.com/sohzm/cheating-daddy/releases/download/0.5.0/Cheating.Daddy-0.5.0.Setup.exe"
-                                class="btn btn-primary"
-                            >
-                                <span>↓</span>
-                                <span>Windows Setup</span>
-                            </a>
-                            <a
-                                href="https://github.com/sohzm/cheating-daddy/releases/download/0.5.0/Cheating.Daddy-0.5.0-arm64.dmg"
-                                class="btn btn-primary"
-                            >
-                                <span>↓</span>
-                                <span>macOS Setup</span>
-                            </a>
-                        </div>
-                        <p class="mb-32">
-                            You can also get older releases from <a href="https://github.com/sohzm/cheating-daddy/releases">GitHub Releases</a>
+                    <div class="section-header">
+                        <h2>FAQ</h2>
+                    </div>
+
+                    <div class="faq-item">
+                        <h3>Where to get a free API key?</h3>
+                        <p>Follow <a href="/help/api-key">this tutorial</a> to get a free API key.</p>
+                    </div>
+
+                    <div class="faq-item">
+                        <h3>Sound is not working on macOS</h3>
+                        <p>Check <a href="/help/macos-audio">macOS audio permissions</a> for step-by-step instructions.</p>
+                    </div>
+
+                    <div class="faq-item">
+                        <h3>I'm getting a virus warning</h3>
+                        <p>
+                            <strong>macOS users:</strong> <a href="/help/macos-install-warning">Follow this tutorial</a><br /><br />
+                            The app is not code signed because I don't have a developer ID. This triggers security warnings but the app is safe.
+                            If you can help with code signing, join <a href="https://discord.gg/GCBdubnXfJ">Discord</a>.
                         </p>
                     </div>
-                </div>
 
-                <div class="content-section">
-                    <div class="section-content">
-                        <h2 class="mb-32">Frequently Asked Questions</h2>
+                    <div class="faq-item">
+                        <h3>I have another problem</h3>
+                        <p>
+                            Submit an issue on <a href="https://github.com/sohzm/cheating-daddy/issues">GitHub</a> or join
+                            <a href="https://discord.gg/GCBdubnXfJ">Discord</a> for help.
+                        </p>
+                    </div>
 
-                        <div class="card">
-                            <h3 class="card-title">Where to get a free API key?</h3>
-                            <div class="card-content">Follow <a href="/help/api-key">this tutorial</a> to get a free API key for the app.</div>
-                        </div>
-
-                        <div class="card">
-                            <h3 class="card-title">Sound is not working on macOS</h3>
-                            <div class="card-content">
-                                Check this tutorial: <a href="/help/macos-audio">macOS sound not working</a> for step-by-step instructions.
-                            </div>
-                        </div>
-
-                        <div class="card">
-                            <h3 class="card-title">I am getting a virus warning</h3>
-                            <div class="card-content">
-                                <strong>macOS users:</strong> <a href="/help/macos-install-warning">Follow this tutorial</a><br /><br />
-                                The reason is that I don't have a developer ID for Windows or macOS, so the app is not signed. This makes Windows and
-                                macOS think that the app is a virus, but it's completely safe.<br /><br />
-                                If someone wants to help me with code signing, join the <a href="https://discord.gg/GCBdubnXfJ">Discord</a>.
-                            </div>
-                        </div>
-
-                        <div class="card">
-                            <h3 class="card-title">I have some other problem</h3>
-                            <div class="card-content">
-                                Submit an issue on <a href="https://github.com/sohzm/cheating-daddy/issues">GitHub</a> or join the
-                                <a href="https://discord.gg/GCBdubnXfJ">Discord</a> for help.
-                            </div>
-                        </div>
-
-                        <div class="card">
-                            <h3 class="card-title">So you support cheating?</h3>
-                            <div class="card-content">
-                                No, cheating is cringe and <em>(a lot of times)</em> ugly. Just be productive and get stuff done.
-                            </div>
-                        </div>
+                    <div class="faq-item">
+                        <h3>So you support cheating?</h3>
+                        <p>No, cheating is cringe. Just be productive and get stuff done.</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- Footer -->
         <footer class="footer">
             <div class="footer-container">
                 <a href="https://github.com/sohzm/cheating-daddy" target="_blank" class="github-star">
                     <img src="/assets/social/github.svg" alt="GitHub" />
-                    <span>Star us on GitHub</span>
+                    <span>Star on GitHub</span>
                 </a>
 
                 <div class="social-links">
@@ -146,27 +173,8 @@
                     </a>
                 </div>
 
-                <p class="footer-text">Made by <a href="https://soham.sh/" target="_blank">soham</a></p>
+                <p class="footer-text">Made by <a href="https://soham.sh/" target="_blank">Soham</a></p>
             </div>
         </footer>
-
-        <script>
-            // Navbar scroll effect
-            function handleNavbarScroll() {
-                const navbar = document.getElementById('navbar');
-                const scrolled = window.scrollY > 50;
-
-                if (scrolled) {
-                    navbar.classList.add('scrolled');
-                } else {
-                    navbar.classList.remove('scrolled');
-                }
-            }
-
-            // Initialize
-            document.addEventListener('DOMContentLoaded', function () {
-                window.addEventListener('scroll', handleNavbarScroll);
-            });
-        </script>
     </body>
 </html>
