--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -1,121 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>cheating daddy - tutorial</title>
+        <title>Tutorial - Cheating Daddy</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <meta name="description" content="a free and opensource app that lets you gain an unfair advantage" />
+        <meta name="description" content="Learn how to use Cheating Daddy" />
         <meta name="author" content="soham.sh" />
-        <meta name="keywords" content="cheating, daddy, app, free, opensource, unfair advantage" />
-        <meta property="og:title" content="cheating daddy - download" />
+        <meta property="og:title" content="Tutorial - Cheating Daddy" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://cheatingdaddy.com/download" />
+        <meta property="og:url" content="https://cheatingdaddy.com/tutorial" />
         <meta property="og:image" content="https://cheatingdaddy.com/assets/bg.png" />
-        <meta property="og:image:width" content="1200" />
-        <meta property="og:image:height" content="630" />
-        <meta property="og:image:alt" content="cheating daddy logo" />
-        <meta property="og:description" content="download cheating daddy for free" />
-        <meta property="og:site_name" content="cheating daddy" />
-        <meta property="og:locale" content="en_US" />
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="cheating daddy - download" />
-        <meta name="twitter:description" content="download cheating daddy for free" />
-        <meta name="twitter:image" content="https://cheatingdaddy.com/assets/bg.png" />
-        <meta name="twitter:site" content="@cheating_daddy" />
+        <meta property="og:description" content="Learn how to use Cheating Daddy" />
         <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="/common.css" />
+
         <style>
-            .video-wrapper {
-                background: linear-gradient(135deg, #f8fafc 60%, #e0e7ef 100%);
-                padding: 24px 16px;
-                border-radius: 24px;
-                box-shadow: 0 8px 32px rgba(30, 58, 138, 0.08);
-                margin-top: 32px;
-                max-width: 800px;
-                margin-left: auto;
-                margin-right: auto;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-            .video-wrapper > div {
-                width: 100%;
-                max-width: 720px;
-                border-radius: 16px;
+            .video-container {
+                position: relative;
+                padding-bottom: 56.25%;
+                height: 0;
                 overflow: hidden;
-                box-shadow: 0 4px 24px rgba(0, 0, 0, 0.1);
-                background: #fff;
+                border: 1px solid var(--border);
+                border-radius: 8px;
+                background: #f5f5f5;
             }
-            @media (max-width: 900px) {
-                .video-wrapper {
-                    max-width: 100%;
-                    padding: 16px 4px;
-                }
-                .video-wrapper > div {
-                    max-width: 100%;
-                }
+
+            .video-container iframe {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
             }
         </style>
     </head>
     <body>
-        <!-- Navigation -->
-        <nav class="navbar" id="navbar">
+        <nav class="navbar">
             <div class="nav-container">
-                <a href="/"><img src="/assets/new/new-logo.svg" alt="cheating daddy" class="logo" /></a>
-
+                <a href="/" class="nav-brand">Cheating Daddy</a>
                 <div class="nav-links">
                     <a href="/help">Help</a>
-                    <a href="/tutorial">Tutorial</a>
-                    <a href="/download" class="active">Download</a>
-                    <a href="https://github.com/sohzm/cheating-daddy" target="_blank">Source</a>
+                    <a href="/tutorial" class="active">Tutorial</a>
+                    <a href="/download">Download</a>
+                    <a href="https://github.com/sohzm/cheating-daddy" target="_blank">GitHub</a>
                 </div>
             </div>
         </nav>
 
-        <!-- Main Content -->
         <div class="main-content">
             <div class="container">
                 <div class="page-header">
                     <h1 class="page-title">Tutorial</h1>
-                    <p class="page-subtitle">How to Cheat Like a Pro (Without Getting Caught)</p>
-                    <div class="video-wrapper" style="margin-top: 32px; max-width: 800px; margin-left: auto; margin-right: auto">
-                        <div
-                            style="
-                                position: relative;
-                                padding-bottom: 56.25%;
-                                height: 0;
-                                overflow: hidden;
-                                border-radius: 16px;
-                                box-shadow: 0 4px 24px rgba(0, 0, 0, 0.08);
-                            "
-                        >
-                            <iframe
-                                width="720"
-                                height="435"
-                                alt="Watch & Learn: How to Use Cheating Daddy"
-                                src=""
-                                title="YouTube video player"
-                                frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                referrerpolicy="strict-origin-when-cross-origin"
-                                allowfullscreen
-                            ></iframe>
-                        </div>
+                    <p class="page-subtitle">How to use Cheating Daddy.</p>
+                </div>
+
+                <hr class="divider" />
+
+                <div class="content-section">
+                    <div class="video-container">
+                        <iframe
+                            src=""
+                            title="Tutorial"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen
+                        ></iframe>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Footer -->
+
         <footer class="footer">
             <div class="footer-container">
                 <a href="https://github.com/sohzm/cheating-daddy" target="_blank" class="github-star">
                     <img src="/assets/social/github.svg" alt="GitHub" />
-                    <span>Star us on GitHub</span>
+                    <span>Star on GitHub</span>
                 </a>
 
                 <div class="social-links">
@@ -133,27 +97,8 @@
                     </a>
                 </div>
 
-                <p class="footer-text">Made by <a href="https://soham.sh/" target="_blank">soham</a></p>
+                <p class="footer-text">Made by <a href="https://soham.sh/" target="_blank">Soham</a></p>
             </div>
         </footer>
-
-        <script>
-            // Navbar scroll effect
-            function handleNavbarScroll() {
-                const navbar = document.getElementById('navbar');
-                const scrolled = window.scrollY > 50;
-
-                if (scrolled) {
-                    navbar.classList.add('scrolled');
-                } else {
-                    navbar.classList.remove('scrolled');
-                }
-            }
-
-            // Initialize
-            document.addEventListener('DOMContentLoaded', function () {
-                window.addEventListener('scroll', handleNavbarScroll);
-            });
-        </script>
     </body>
 </html>
